src/test/ui/const_prop/inline_spans.stderr
error: this arithmetic operation will overflow
  --> $DIR/inline_spans.rs:14:5
   |
LL |     let _ = add(u8::MAX, 1);
   |             --------------- in this inlined function call
...
LL |     x + y
   |     ^^^^^ attempt to compute `u8::MAX + 1_u8`, which would overflow
   |
   = note: `#[deny(arithmetic_overflow)]` on by default

error: aborting due to previous error

